# perfectory-public

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  SECURITY.md  THIRD_PARTY_NOTICES.md  lefthook.yml  lychee.toml  rust-toolchain.toml
products/gongzzang/: .env.example  .gitignore  .npmrc  AGENTS.md  Cargo.toml  README.md  TECH.md  biome.json  clippy.toml  package.json  pnpm-lock.yaml  tarpaulin.toml  turbo.json
products/gongzzang/apps/platform-web/: README.md
products/gongzzang/apps/web/: .env.local.example  README.md  next.config.ts  package.json  playwright.config.ts  proxy.ts  vitest.config.ts  vitest.integration.config.ts
products/gongzzang/crates/admin-action-domain/: Cargo.toml  README.md
products/gongzzang/crates/analysis-report-domain/: Cargo.toml  README.md
products/gongzzang/crates/api-types/: README.md
products/gongzzang/crates/audit-log-domain/: Cargo.toml  README.md
products/gongzzang/crates/bookmark-domain/: Cargo.toml  README.md
products/gongzzang/crates/business-verification-domain/: Cargo.toml  README.md
products/gongzzang/crates/circuit-breaker/: Cargo.toml  README.md
products/gongzzang/crates/court-auction-domain/: Cargo.toml  README.md
products/gongzzang/crates/data-clients/: README.md
products/gongzzang/crates/embedding/: README.md
products/gongzzang/crates/featured-content-domain/: Cargo.toml  README.md
products/gongzzang/crates/foundation-platform-client/: Cargo.toml
products/gongzzang/crates/gongzzang-outbox/: Cargo.toml
products/gongzzang/crates/gongzzang-persistence/: Cargo.toml  README.md
products/gongzzang/crates/listing-domain/: Cargo.toml  README.md
products/gongzzang/crates/listing-photo-domain/: Cargo.toml  README.md
products/gongzzang/crates/listing-report-domain/: Cargo.toml  README.md
products/gongzzang/crates/listing-review-domain/: Cargo.toml  README.md
products/gongzzang/crates/notification-domain/: Cargo.toml  README.md
products/gongzzang/crates/outbox-event-domain/: Cargo.toml  README.md
products/gongzzang/crates/parcel-lookup/: Cargo.toml
products/gongzzang/crates/product-identity-infrastructure/: Cargo.toml  README.md
products/gongzzang/crates/real-transaction-domain/: Cargo.toml  README.md
products/gongzzang/crates/repo-guard/: Cargo.toml
products/gongzzang/crates/search-history-domain/: Cargo.toml  README.md
products/gongzzang/crates/shared-kernel/: Cargo.toml  README.md
products/gongzzang/crates/system-alert-domain/: Cargo.toml  README.md
products/gongzzang/crates/user-domain/: Cargo.toml  README.md
products/gongzzang/db/migration/: README.md
products/gongzzang/docs/: README.md  ssot-matrix.md  sss-charter.md
products/gongzzang/docs/adr/: 0009-iac-pulumi.md  0012-pipeline-visualization-react-flow.md  0013-listing-search-naver-maps.md  0014-base-layer-defer-pmtiles.md  0015-v-world-acl-rearchitecture.md  0016-medallion-base-layer-postgis-silver-pmtiles-gold.md  0017-listing-marker-render-canvas-bitmap-stamp.md  0018-pnu-first-identity-no-coordinates.md  0019-pmtiles-source-via-addsourcetype.md  0020-naver-vector-interaction-model.md  0021-static-vector-tile-decomposition.md  0022-bronze-scraping-isolated-python-service.md  0023-audit-2026-05-08-hardening.md  0025-bronze-scraping-workflow-orchestrator-not-rust-spawn.md  0026-bronze-api-archive-r2-not-postgres-jsonb.md  0027-admin-complex-layer-source-deferred.md  0028-supply-chain-sha-pin-and-cleanup-cron.md  0029-explicit-environment-separation.md  0030-three-service-architecture.md  0031-foundation-platform-bounded-contexts.md  0032-eventual-consistency-strategy.md  0033-seven-guardrails-enforcement.md  0034-catalog-ownership-handover-to-foundation-platform.md  0036-static-vector-tile-runtime-contract.md  0037-pnu-anchor-pbf-marker-tiles.md  0038-listing-marker-serving-index-filter-mask.md  0039-service-owned-lakehouse-registry-integration.md  0040-bazel-first-build-verification-control-plane.md  0041-hermetic-javascript-package-bazel-rules.md  0042-cross-repo-bazel-native-build-graph.md  0043-bazel-transition-provisioning-decisions.md  0044-bazel-transition-reconciliation.md  0045-adr-placement-cross-repo-governance.md  0046-kafka-kubernetes-preliminary-design.md  0047-collection-event-fabric.md  0048-horizontal-platform-redefinition.md  0049-identity-platform-contract-design.md  0050-dawneer-workbench-and-internal-admin-surface.md  README.md
products/gongzzang/docs/architecture/: README.md  caching.md  data-flow.md  foundation-platform-boundary.v1.json  foundation-platform-catalog-api-contract.v1.pin.json  foundation-platform-webhook-receiver-contract.v1.pin.json  geo-pipeline.md  layers.md  mcp-vs-api.md  observability.md  partner-listing-exchange-boundary.md  traffic-auth-policy-registry.v1.json
products/gongzzang/docs/auth/: frontend-integration.md  staging-zitadel-integration.md
products/gongzzang/docs/backend/: README.md  circuit-breaker.md
products/gongzzang/docs/conventions/: README.md  comments.md  enforcement-flow.md  git-and-pr.md  naming-and-ids.md  rust.md  sql.md  testing.md  typescript.md
products/gongzzang/docs/cost/: README.md
products/gongzzang/docs/data-sources/: README.md  data-go-kr.md  korean-land-mcp.md  naver-maps.md  v-world.md
products/gongzzang/docs/database/: er-diagram-v001.md  migrations.md
products/gongzzang/docs/frontend/: README.md  listings-search.md  panel-sss-axes.md
products/gongzzang/infrastructure/: README.md  package.json
products/gongzzang/migrations/: 20260719000105_operations_tables.sql  20260719000106_db_roles.sql  20260719000111_analysis_report_updated_at.sql  20260719000112_user_roles_check.sql  20260719000115_parcel_marker_anchor_projection.sql  20260719000116_listing_marker_projection.sql  20260719000118_foundation_platform_event_inbox_anchor_import.sql  20260719000119_listing_marker_overlay_and_dirty_queue.sql  20260719000120_outbox_delivery_leases.sql  README.md
products/gongzzang/scripts/: osm-spike.ts
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
(+385 files in other folders)
