[workspace]
resolver = "2"
members = [
    "crates/shared-kernel",
    "crates/user-domain",
    "crates/listing-domain",
    "crates/listing-photo-domain",
    "crates/real-transaction-domain",
    "crates/court-auction-domain",
    "crates/bookmark-domain",
    "crates/search-history-domain",
    "crates/analysis-report-domain",
    "crates/notification-domain",
    "crates/audit-log-domain",
    "crates/outbox-event-domain",
    "crates/admin-action-domain",
    "crates/business-verification-domain",
    "crates/listing-review-domain",
    "crates/listing-report-domain",
    "crates/featured-content-domain",
    "crates/system-alert-domain",
    "crates/product-identity-infrastructure",
    "crates/foundation-platform-client",
    "crates/circuit-breaker",
    "crates/parcel-lookup",
    "crates/gongzzang-persistence",
    "crates/gongzzang-outbox",
    "crates/repo-guard",
    "services/gongzzang-api",
    "services/gongzzang-outbox-publisher",
    # 다른 services/* 와 crates/* 는 sub-project 2+에서 추가됨.
]

[workspace.package]
edition = "2021"
rust-version = "1.96.0"
license-file = "../../LICENSES/LicenseRef-Proprietary.txt"
authors = ["공짱"]
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

[workspace.dependencies]
# 추가 예정 (Plan 2b/2c): utoipa
async-trait = "0.1"
# SP-Obs T5: Sentry SDK — env-driven, silent disabled if no SENTRY_DSN
sentry = { version = "0.48.2", default-features = false, features = ["backtrace", "contexts", "panic", "rustls", "reqwest"] }
sentry-tracing = "0.48.2"
deadpool-redis = "0.18"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
geo-types = { version = "0.7", features = ["serde"] }
jsonwebtoken = "10"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "bigdecimal",
    "json",
    "migrate",
] }
thiserror = "1"
tokio = "1"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
ulid = "1.1"
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
