[package]
name = "business-verification-domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "공짱 BusinessVerification domain (RDS 동적 — 4-status workflow + version OCC + 24h SLA)"

[dependencies]
shared-kernel = { path = "../shared-kernel", version = "0.1.0" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
