[package]
name = "foundation-platform-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Foundation Platform HTTP endpoint and workload authentication client primitives"

[dependencies]
circuit-breaker = { path = "../circuit-breaker", version = "0.1.0" }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = "3"

[lints]
workspace = true
