[package]
name = "parcel-lookup"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "PNU parcel info lookup port backed by the Foundation Platform Catalog API"

[dependencies]
shared-kernel = { path = "../shared-kernel", version = "0.1.0" }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
