[package]
name = "product-identity-infrastructure"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true
description = "Gongzzang product identity adapters for Zitadel, Axum, Redis, and PostgreSQL"

[dependencies]
shared-kernel = { path = "../shared-kernel", version = "0.1.0" }
user-domain = { path = "../user-domain", version = "0.1.0" }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
deadpool-redis = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "macros", "json", "chrono"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tower = "0.5"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
